version 0.8.5 --

  - when we recieve a startup message from blackbox, clear out any leftover
    windows in the window list. These are caused by the fact that on shutdown
    of blackbox, if any windows are unmanaged after bbkeys, bbkeys doesn't get
    notified of their destruction and so ends up with extra windows in its list.
    [xOr]

  - fix compiling issues under solaris. Thanks to grub on irc for use of his
    time for testing.
    [xOr]

  - get rid of work-around for pre-0.60 blackbox, which fixes bug that let you
    move the toolbar around with bbkeys.
    [xOr]

  - fix window focus tracking bug. Fixes bug where you could manipulate the
    last focused window on a nono-visible workspace.
    [xOr]

  - fix multi-head bug in main.cc.  We now putenv("DISPLAY=...") so that
    applications launched will be launched on the correct display.  Thanks to
    Greg Gilbert for his patch!
    [vanRijn]

  - fix bug in main.cc (| rather than ||).  Thanks to Roman Neuhauser!
    [vanRijn]

  - fix bug in bbkeys.hh--increasing MaxInstructions to 100 for cthulhain
    [vanRijn]

  - fix in bbkeys.cc -- XUngrabKey changed to use same call to find what
    screen we're on as the XGrabKey call 
    [vanRijn]

  - fix in bbkeys.cc -- doing "xterm -e sh -c $command" rather than "xterm -e
    $command".  Thanks to Magnus Solvang for the bug report.  Also, changing
    hideous char* and snprintf() to ostrstream, YAY!!
    [vanRijn]

version 0.8.4 --

  - add a sanity check to the removeWindow function. Basically, blackbox tells
    bbkeys when a window disappears, or is removed. If the window being
    removed was the last window blackbox specified as having the input focus,
    bbkeys now resets what it thinks has the input focus. This prevents the
    bug reproducable by iconifying the last window on a workspace, and then
    trying to maximize "nothing". [xOr]

  - cleaning up build again.  Rather than having 200 -DDEFINE_ statements